-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.0.1, 5.0.2, 6.0, 6.1
-
Ubuntu 12.04
-
13
-
51089b338 (dev), ebd3a7603 (6.5)
Item {
property date aDate: new Date()
Component.onCompleted: {
console.log(aDate)
aDate.setDate(14); // Does nothing.
console.log(aDate)
console.log((aDate instanceof Date)) // True.
}
}
Declaring aDate as a var works.
- duplicates
-
QTBUG-43311 You cannot set years on date properties in QML
-
- Closed
-
- relates to
-
QTBUG-99766 QML value type write-back support is inconsistent
-
- Closed
-
| For Gerrit Dashboard: QTBUG-28981 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 452477,11 | QML: Fix write back of Date values | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 454464,2 | QML: Fix write back of Date values | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |