QML: Fix write back of Date values

A JavaScript Date object can be backed by QDate, QTime or QDateTime.
Allow those to be written back.

Fixes: QTBUG-28981
Change-Id: Ic46b5c4daf75453f03e99470933cf179820e63ef
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit 51089b33897e0f99748c9dce0df0fb7f660b00bc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>